@@ -59,7 +59,7 @@ class Track(DataObject, Item):
     def update_file_metadata(self, file):
         if file not in self.linked_files:
             return
-        file.copy_metadata(self.metadata)
+        file.merge_metadata(self.metadata)
         file.metadata['~extension'] = file.orig_metadata['~extension']
         file.metadata.changed = True
         file.update(signal=False)
@@ -70,7 +70,7 @@ class Track(DataObject, Item):
             return
         self.linked_files.remove(file)
         self.num_linked_files -= 1
-        file.copy_metadata(file.orig_metadata)
+        file.metadata.copy(file.orig_metadata)
         self.album._remove_file(self, file)
         self.update()
 
